change lib_managed to libs